results/SpecGenBench/4-shot/log-NotCommonMultiple-2023_11_28_00_33_05.txt
public class NotCommonMultiple {
    /*@ public normal_behavior
      @    requires a != 0 && b != 0;
      @    requires (\forall int i; 0 <= i && i < 3; (int)Integer.MIN_VALUE <= (int)args[i] && (int)args[i] <= (int)Integer.MAX_VALUE);
      @    assignable \nothing;
      @    ensures \result <==> (args[2] % args[0] != 0 || args[2] % args[1] != 0); @*/
    public boolean NotCommonMultiple (int a, int b, int m) {
        return m % a != 0 || m % b != 0;
    }
}
/home/max/Documents/JMLGPT/tmp/NotCommonMultiple.java:4: error: cannot find symbol
      @    requires (\forall int i; 0 <= i && i < 3; (int)Integer.MIN_VALUE <= (int)args[i] && (int)args[i] <= (int)Integer.MAX_VALUE);
                                                                                    ^
  symbol:   variable args
  location: class NotCommonMultiple
/home/max/Documents/JMLGPT/tmp/NotCommonMultiple.java:4: error: cannot find symbol
      @    requires (\forall int i; 0 <= i && i < 3; (int)Integer.MIN_VALUE <= (int)args[i] && (int)args[i] <= (int)Integer.MAX_VALUE);
                                                                                                    ^
  symbol:   variable args
  location: class NotCommonMultiple
/home/max/Documents/JMLGPT/tmp/NotCommonMultiple.java:6: error: cannot find symbol
      @    ensures \result <==> (args[2] % args[0] != 0 || args[2] % args[1] != 0); @*/
                                 ^
  symbol:   variable args
  location: class NotCommonMultiple
/home/max/Documents/JMLGPT/tmp/NotCommonMultiple.java:6: error: cannot find symbol
      @    ensures \result <==> (args[2] % args[0] != 0 || args[2] % args[1] != 0); @*/
                                           ^
  symbol:   variable args
  location: class NotCommonMultiple
/home/max/Documents/JMLGPT/tmp/NotCommonMultiple.java:6: error: cannot find symbol
      @    ensures \result <==> (args[2] % args[0] != 0 || args[2] % args[1] != 0); @*/
                                                           ^
  symbol:   variable args
  location: class NotCommonMultiple
/home/max/Documents/JMLGPT/tmp/NotCommonMultiple.java:6: error: cannot find symbol
      @    ensures \result <==> (args[2] % args[0] != 0 || args[2] % args[1] != 0); @*/
                                                                     ^
  symbol:   variable args
  location: class NotCommonMultiple
6 errors

